[package]
name = "tetanizer"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
tantivy = "0.19.2"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
strum = { version = "0.24.1", features = ["derive"] }
regex = "1"
lazy_static = "1.4.0"
serde_json = "1.0"

[dependencies.serenity]
version = "0.11"
default-features = false
features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend"]
